# vkutil

./: CMakeLists.txt
cmake/: CompileVulkanShader.cmake
include/: vkutil_macros.hpp
interface/: allocator.cppm  buffer.cppm  command.cppm  descriptor.cppm  image.cppm  pipeline.cppm  ref_holder.cppm  vkutil.cppm  window.cppm
interface/details/: details.cppm  ranges.cppm
